--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,82 @@
     </header>
 
 <main>
+
+    <!-- Портфолио -->
+    <section>
+
+        <h2>Примеры работ</h2>
+
+        <!-- Фильтры -->
+        <ul>
+            <li>
+                <button type="button">Все</button>
+                </li>
+            <li>
+               <button type="button">Веб-сайты</button> 
+                </li>
+            <li>
+                <button type="button">Приложения</button>
+                </li>
+            <li>
+               <button type="button">Дизайн</button> 
+                </li>
+            <li>
+                <button type="button"> Маркетинг</button>
+               </li>
+        </ul>
+
+        <!-- Примеры работ -->
+        <ul>
+            <li>
+               <div>
+                   <img src="./images/img1p.jpg" alt="Главная страница сайта Технокряк" width="370" height="294">
+                   <h3>Технокряк</h3>
+                   <span>Веб-сайт</span>
+               </div>
+            </li>
+            <li><div>
+                <img src="./images/img2p.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                   <h3>Постер New Orlean vs Golden Star</h3>
+                   <span>Дизайн</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img3p.jpg" alt="Обложка приложения ресторана Seafood" width="370" height="294">
+                  <h3>Ресторан Seafood</h3>
+                   <span>Приложение</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294">
+                   <h3>Проект Prime</h3>
+                   <span>Маркетинг</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294">
+                   <h3>Проект Boxes</h3>
+                   <span>Приложение</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img6p.jpg" alt="Главная страница сайта Inspiration has no Borders" width="370" height="294">
+                   <h3>Inspiration has no Borders</h3>
+                   <span>Веб-сайт</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294">
+                   <h3>Издание Limited Edition</h3>
+                   <span>Дизайн</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294">
+                   <h3>Проект LAB</h3>
+                   <span>Маркетинг</span>
+               </div></li>
+            <li><div>
+                <img src="./images/img9p.jpg" alt="Экран компьютера с главной страницей" width="370" height="294">
+                   <h3>Growing Business</h3>
+                   <span>Приложение</span>
+               </div></li>
+        </ul>
+    </section>
 
 </main>
 
