--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Верхняя линия -->
     <header>
         <nav>
-            <a href="./index.html">
-                <span>Web</span>Studio
+            <a href="./index.html" class="logo">
+                <span class="logo-item">Web</span>Studio
             </a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="linkt">Студия</a></li>
+                <li><a href="" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="contacts list">
+            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
         </ul>
     </header>
 
@@ -29,6 +30,8 @@
 
     <!-- Портфолио -->
     <section>
+
+        <h1>Контент страница Портфолио</h1>
 
         <h2>Примеры работ</h2>
 
