--- a/index.html
+++ b/index.html
@@ -6,96 +6,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- Верхняя линия -->
     <header>
         <nav>
-            <a href="./index.html">
-                <span>Web</span>Studio
+            <a href="./index.html" class="logo">
+                <span class="logo-item">Web</span>Studio
             </a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a href="" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="contacts list">
+            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
         </ul>
     </header>
     <main>
 
         <!-- Шапка -->
-        <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+        <section class="hero">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="button">Заказать услугу</button>
         </section>
 
         <!-- Особенности -->
-        <section>
-            <h2>Особенности</h2>
-            <ul>
+        <section class="section"> 
+            <h2 class="section-title">Особенности</h2>
+            <ul class="features list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="feature-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="feature-title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="feature-title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="feature-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/box1.jpg" alt="Десктопные приложения" width="370"></li>
-                <li><img src="./images/box2.jpg" alt="Мобильные приложения" width="370"></li>
-                <li><img src="./images/box3.jpg" alt="Дизайнерские решения" width="370"></li>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
+                <li><img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="294"></li>
+                <li><img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294"></li>
+                <li><img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294"></li>
             </ul>
         </section>
 
         <!-- Наша компанда -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team list">
                 <li>
                     <div>
-                        <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
+                        <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
+                        <h3 class="team-name">Игорь Демьяненко</h3>
                         <p lang="en">Product Designer</p>
                      </div>
                 </li>
                 <li>
                     <div>
-                        <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270">
-                        <h3>Ольга Репина</h3>
+                        <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
+                        <h3 class="team-name">Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
                     </div>
                 </li>    
                 <li>
                     <div>
-                        <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270">
-                        <h3>Николай Тарасов</h3>
+                        <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
+                        <h3 class="team-name">Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270">
-                        <h3>Михаил Ермаков</h3>
+                        <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
+                        <h3 class="team-name">Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
                     </div>
                 </li>
@@ -109,7 +110,7 @@
         <address>
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address>
+        <address class="list">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
