--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -41,19 +42,19 @@
             <ul class="features list">
                 <li>
                     <h3 class="feature-title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="feature-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="feature-title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="feature-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3 class="feature-title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="feature-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="feature-title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="feature-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -75,29 +76,29 @@
                 <li>
                     <div>
                         <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
-                        <h3 class="team-name">Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <h3 class="teammate-name">Игорь Демьяненко</h3>
+                        <p lang="en" class="position">Product Designer</p>
                      </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
-                        <h3 class="team-name">Ольга Репина</h3>
-                        <p lang="en">Frontend Developer</p>
+                        <h3 class="teammate-name">Ольга Репина</h3>
+                        <p lang="en" class="position">Frontend Developer</p>
                     </div>
                 </li>    
                 <li>
                     <div>
                         <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
-                        <h3 class="team-name">Николай Тарасов</h3>
-                        <p lang="en">Marketing</p>
+                        <h3 class="teammate-name">Николай Тарасов</h3>
+                        <p lang="en" class="position">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
-                        <h3 class="team-name">Михаил Ермаков</h3>
-                        <p lang="en">UI Designer</p>
+                        <h3 class="teammate-name">Михаил Ермаков</h3>
+                        <p lang="en" class="position">UI Designer</p>
                     </div>
                 </li>
             </ul>
@@ -105,14 +106,14 @@
     </main>
 
     <!-- Подвал -->
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <address>
+    <footer class="footer">
+        <a href="./index.html" class="logo"><span class="logo-item">Web</span>Studio</a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <address class="list">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="contacts-list-item">info@devstudio.com</a>
+            <a href="tel:+380991111111" class="contacts-list-item">+38 099 111 11 11</a>
         </address>
     </footer>
 </body>
