--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
                     <div>
                         <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
                         <h3 class="teammate-name">Игорь Демьяненко</h3>
-                        <p lang="en" class="position">Product Designer</p>
+                        <span lang="en" class="position">Product Designer</span>
                      </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
                         <h3 class="teammate-name">Ольга Репина</h3>
-                        <p lang="en" class="position">Frontend Developer</p>
+                        <span lang="en" class="position">Frontend Developer</span>
                     </div>
                 </li>    
                 <li>
                     <div>
                         <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
                         <h3 class="teammate-name">Николай Тарасов</h3>
-                        <p lang="en" class="position">Marketing</p>
+                        <span lang="en" class="position">Marketing</span>
                     </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
                         <h3 class="teammate-name">Михаил Ермаков</h3>
-                        <p lang="en" class="position">UI Designer</p>
+                        <span lang="en" class="position">UI Designer</span>
                     </div>
                 </li>
             </ul>
@@ -107,13 +107,13 @@
 
     <!-- Подвал -->
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="logo-item">Web</span>Studio</a>
+        <a href="./index.html" class="logo"><span class="logo-item">Web</span><span class="logo-down">Studio</span></a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address class="list">
-            <a href="mailto:info@devstudio.com" class="contacts-list-item">info@devstudio.com</a>
-            <a href="tel:+380991111111" class="contacts-list-item">+38 099 111 11 11</a>
+        <address class="contacts list">
+            <a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a>
+            <a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a>
         </address>
     </footer>
 </body>
