--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -15,7 +17,7 @@
                 <span class="logo-item">Web</span>Studio
             </a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="linkt">Студия</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="" class="link current">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
@@ -31,93 +33,91 @@
     <!-- Портфолио -->
     <section>
 
-        <h1>Контент страница Портфолио</h1>
-
-        <h2>Примеры работ</h2>
+        <h1>Портфолио</h1>
 
         <!-- Фильтры -->
-        <ul>
+        <ul class="filters list">
             <li>
-                <button type="button">Все</button>
+                <button type="button" class="filter">Все</button>
                 </li>
             <li>
-               <button type="button">Веб-сайты</button> 
+               <button type="button" class="filter">Веб-сайты</button> 
                 </li>
             <li>
-                <button type="button">Приложения</button>
+                <button type="button" class="filter">Приложения</button>
                 </li>
             <li>
-               <button type="button">Дизайн</button> 
+               <button type="button" class="filter">Дизайн</button> 
                 </li>
             <li>
-                <button type="button"> Маркетинг</button>
+                <button type="button" class="filter"> Маркетинг</button>
                </li>
         </ul>
 
         <!-- Примеры работ -->
-        <ul>
+        <ul class="works list">
             <li>
                <div>
                    <img src="./images/img1p.jpg" alt="Главная страница сайта Технокряк" width="370" height="294">
-                   <h3>Технокряк</h3>
-                   <span>Веб-сайт</span>
+                   <h2  class="work-title">Технокряк</h2>
+                   <span class="work-type">Веб-сайт</span>
                </div>
             </li>
             <li><div>
                 <img src="./images/img2p.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                   <h3>Постер New Orlean vs Golden Star</h3>
-                   <span>Дизайн</span>
+                   <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+                   <span class="work-type">Дизайн</span>
                </div></li>
             <li><div>
                 <img src="./images/img3p.jpg" alt="Обложка приложения ресторана Seafood" width="370" height="294">
-                  <h3>Ресторан Seafood</h3>
-                   <span>Приложение</span>
+                  <h2 class="work-title">Ресторан Seafood</h2>
+                   <span class="work-type">Приложение</span>
                </div></li>
             <li><div>
                 <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294">
-                   <h3>Проект Prime</h3>
-                   <span>Маркетинг</span>
+                   <h2 class="work-title">Проект Prime</h2>
+                   <span class="work-type">Маркетинг</span>
                </div></li>
             <li><div>
                 <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294">
-                   <h3>Проект Boxes</h3>
-                   <span>Приложение</span>
+                   <h2 class="work-title">Проект Boxes</h2>
+                   <span class="work-type">Приложение</span>
                </div></li>
             <li><div>
                 <img src="./images/img6p.jpg" alt="Главная страница сайта Inspiration has no Borders" width="370" height="294">
-                   <h3>Inspiration has no Borders</h3>
-                   <span>Веб-сайт</span>
+                   <h2 class="work-title">Inspiration has no Borders</h2>
+                   <span class="work-type">Веб-сайт</span>
                </div></li>
             <li><div>
                 <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294">
-                   <h3>Издание Limited Edition</h3>
-                   <span>Дизайн</span>
+                   <h2 class="work-title">Издание Limited Edition</h2>
+                   <span class="work-type">Дизайн</span>
                </div></li>
             <li><div>
                 <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294">
-                   <h3>Проект LAB</h3>
-                   <span>Маркетинг</span>
+                   <h2 class="work-title">Проект LAB</h2>
+                   <span class="work-type">Маркетинг</span>
                </div></li>
             <li><div>
                 <img src="./images/img9p.jpg" alt="Экран компьютера с главной страницей" width="370" height="294">
-                   <h3>Growing Business</h3>
-                   <span>Приложение</span>
+                   <h2>Growing Business</h2>
+                   <span class="work-type">Приложение</span>
                </div></li>
         </ul>
     </section>
 
 </main>
 
-    <!-- Подвал -->
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-    </footer>
+<!-- Подвал -->
+<footer class="footer">
+    <a href="./index.html" class="logo"><span class="logo-item">Web</span><span class="logo-down">Studio</span></a>
+    <address class="address">
+        г. Киев, пр-т Леси Украинки, 26
+    </address>
+    <address class="contacts list">
+        <a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a>
+        <a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a>
+    </address>
+</footer>
 </body>
 </html>
