--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Особенности -->
         <section class="section"> 
-            <h2 class="section-title">Особенности</h2>
+            <h2 hidden class="section-title">Особенности</h2>
             <ul class="features list">
                 <li>
                     <h3 class="feature-title">Внимание к деталям</h3>
@@ -77,28 +77,28 @@
                     <div>
                         <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260">
                         <h3 class="teammate-name">Игорь Демьяненко</h3>
-                        <span lang="en" class="position">Product Designer</span>
+                        <p lang="en" class="position">Product Designer</p>
                      </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260">
                         <h3 class="teammate-name">Ольга Репина</h3>
-                        <span lang="en" class="position">Frontend Developer</span>
+                        <p lang="en" class="position">Frontend Developer</p>
                     </div>
                 </li>    
                 <li>
                     <div>
                         <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260">
                         <h3 class="teammate-name">Николай Тарасов</h3>
-                        <span lang="en" class="position">Marketing</span>
+                        <p lang="en" class="position">Marketing</p>
                     </div>
                 </li>
                 <li>
                     <div>
                         <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260">
                         <h3 class="teammate-name">Михаил Ермаков</h3>
-                        <span lang="en" class="position">UI Designer</span>
+                        <p lang="en" class="position">UI Designer</p>
                     </div>
                 </li>
             </ul>
@@ -111,10 +111,10 @@
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address class="contacts list">
-            <a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a>
-            <a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a>
-        </address>
+        <ul class="contacts list">
+            <li><a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a></li>
+            <li><a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
