--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
     <!-- Портфолио -->
     <section>
 
-        <h1>Портфолио</h1>
+        <h1 hidden>Портфолио</h1>
 
         <!-- Фильтры -->
         <ul class="filters list">
@@ -66,42 +66,42 @@
             <li><div>
                 <img src="./images/img2p.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                    <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                   <span class="work-type">Дизайн</span>
+                   <p class="work-type">Дизайн</p>
                </div></li>
             <li><div>
                 <img src="./images/img3p.jpg" alt="Обложка приложения ресторана Seafood" width="370" height="294">
                   <h2 class="work-title">Ресторан Seafood</h2>
-                   <span class="work-type">Приложение</span>
+                   <p class="work-type">Приложение</p>
                </div></li>
             <li><div>
                 <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294">
                    <h2 class="work-title">Проект Prime</h2>
-                   <span class="work-type">Маркетинг</span>
+                   <p class="work-type">Маркетинг</p>
                </div></li>
             <li><div>
                 <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294">
                    <h2 class="work-title">Проект Boxes</h2>
-                   <span class="work-type">Приложение</span>
+                   <p class="work-type">Приложение</p>
                </div></li>
             <li><div>
                 <img src="./images/img6p.jpg" alt="Главная страница сайта Inspiration has no Borders" width="370" height="294">
                    <h2 class="work-title">Inspiration has no Borders</h2>
-                   <span class="work-type">Веб-сайт</span>
+                   <p class="work-type">Веб-сайт</p>
                </div></li>
             <li><div>
                 <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294">
                    <h2 class="work-title">Издание Limited Edition</h2>
-                   <span class="work-type">Дизайн</span>
+                   <p class="work-type">Дизайн</p>
                </div></li>
             <li><div>
                 <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294">
                    <h2 class="work-title">Проект LAB</h2>
-                   <span class="work-type">Маркетинг</span>
+                   <p class="work-type">Маркетинг</p>
                </div></li>
             <li><div>
                 <img src="./images/img9p.jpg" alt="Экран компьютера с главной страницей" width="370" height="294">
                    <h2>Growing Business</h2>
-                   <span class="work-type">Приложение</span>
+                   <p class="work-type">Приложение</p>
                </div></li>
         </ul>
     </section>
@@ -114,10 +114,10 @@
     <address class="address">
         г. Киев, пр-т Леси Украинки, 26
     </address>
-    <address class="contacts list">
-        <a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a>
-        <a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a>
-    </address>
+    <ul class="contacts list">
+        <li><a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a></li>
+        <li><a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a></li>
+    </ul>
 </footer>
 </body>
 </html>
