--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                </div></li>
             <li><div>
                 <img src="./images/img9p.jpg" alt="Экран компьютера с главной страницей" width="370" height="294">
-                   <h2>Growing Business</h2>
+                   <h2 class="work-title">Growing Business</h2>
                    <p class="work-type">Приложение</p>
                </div></li>
         </ul>
